<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="payment"
            type="com.suresh.navigationretrofit.Payments" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/grey"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_completed_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed_date_time" />

            <TextView
                android:id="@+id/tv_completed_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{payment.completedDateTime}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/grey"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_chit_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chit_no" />

            <TextView
                android:id="@+id/tv_chitNo_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{payment.chitNo}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/grey"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_branch_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/branch_name" />

            <TextView
                android:id="@+id/tv_branch_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{payment.branchName}" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/grey"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_paid_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paid_amount" />

            <TextView
                android:id="@+id/tv_paid_amount_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{payment.paidAmount}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/grey"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_trans_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trans_id" />

            <TextView
                android:id="@+id/tv_trans_id_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{payment.transId}" />
        </LinearLayout>

    </LinearLayout>
</layout>