<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="payment"
            type="com.suresh.navigationretrofit.Payments" />

        <variable
            name="dateVisibility"
            type="boolean" />
        <variable
            name="paymentItemClickListener"
            type="com.suresh.navigationretrofit.PaymentsAdapter.PaymentSelectListener"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        tools:context=".PaymentFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/rl_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_200">

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{payment.completedDateTime}"
                        android:visibility="@{dateVisibility ? View.VISIBLE : View.GONE}"
                        android:padding="@dimen/date_padding"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rl_date"
                    android:padding="@dimen/date_padding"
                    android:background="@color/grey"
                    android:onClick="@{()->paymentItemClickListener.onPaymentSelected(payment)}">

                    <TextView
                        android:id="@+id/tv_chitNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chit_no" />

                    <TextView
                        android:id="@+id/tv_chitNo_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/tv_chitNo"
                        android:text="@{payment.chitNo}" />

                    <TextView
                        android:id="@+id/tv_branch_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_chitNo"
                        android:text="@string/branch_name" />

                    <TextView
                        android:id="@+id/tv_branch_name_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_chitNo_value"
                        android:layout_toEndOf="@id/tv_branch_name"
                        android:text="@{payment.branchName}" />

                    <TextView
                        android:id="@+id/tv_paid_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_branch_name"
                        android:text="@string/paid_amount" />

                    <TextView
                        android:id="@+id/tv_paid_amount_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_branch_name_value"
                        android:layout_toEndOf="@+id/tv_paid_amount"
                        android:text="@{payment.paidAmount}" />

                    <TextView
                        android:id="@+id/tv_trans_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_paid_amount"
                        android:text="@string/trans_id" />

                    <TextView
                        android:id="@+id/tv_trans_id_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_paid_amount_value"
                        android:layout_toEndOf="@+id/tv_trans_id"
                        android:text="@{payment.transId}" />


                </RelativeLayout>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>
</layout>